# Pip-Boy

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: dual-backend-contract.md  dual-backend-progress.md  identity-model.md  performance-baseline.md  releasing.md  sdk-contract-notes.md  themes.md  todo.md  workspace-scaffold-and-worktree-isolation.md  worktree-task-isolation.md
scripts/: selftest_tier1_cli.py  selftest_tier2_cli.py  selftest_tier2_lock_cli.py  smoke_identity_v2.py  spike_streaming_query.py  spike_walkup.py
src/pip_agent/: __init__.py  __main__.py  _profile.py  agent.py  agent_cli.py  agent_host.py  agent_runner.py  anthropic_client.py  background.py  channels.py  commands.py  compact.py  config.py  console_io.py  doctor.py  fileutil.py  hooks.py  host_commands.py  host_io.py  host_scheduler.py  host_state.py  lanes.py  llm_client.py  mcp_tools.py  models.py  plugins.py  profiler.py  resilience.py  routing.py  runtime_mode.py  scheduler.py  streaming_session.py  subagent.py  task_graph.py  tool_dispatch.py  tools.py  web.py  wechat_controller.py  worktree.py
src/pip_agent/backends/: __init__.py  base.py
src/pip_agent/backends/claude_code/: __init__.py
src/pip_agent/backends/codex_cli/: __init__.py  bridge_env.py  config_gen.py  event_translator.py  mcp_bridge.py  plugins.py  runner.py  streaming.py  turn_options.py
src/pip_agent/channels/: base.py  cli.py  plan_forwarder.py  stream_render.py  wechat.py  wecom.py
src/pip_agent/memory/: __init__.py  consolidate.py  recall.py  reflect.py  scheduler.py  transcript_source.py
src/pip_agent/memory/sops/: memory_pipeline_sop.md
src/pip_agent/scaffold/: __init__.py  agents.md  env.example  gitignore_entries.txt  heartbeat.md  models.json  pip-boy.md  system_rules.md  themes_README.md  work_rules.md
src/pip_agent/skills/: __init__.py
src/pip_agent/skills/agent-team/: SKILL.md
src/pip_agent/skills/create-skill/: SKILL.md
src/pip_agent/skills/task-planning/: SKILL.md
src/pip_agent/team/: __init__.py
src/pip_agent/tui/: __init__.py  app.py  capability.py  history_input.py  loader.py  log_handler.py  manager.py  messages.py  modals.py  pump.py  runner.py  sinks.py  textual_theme.py  theme_api.py  tool_format.py
src/pip_agent/tui/themes/: __init__.py
src/pip_agent/tui/themes/vault-amber/: art.txt  ascii_art_0.txt  ascii_art_1.txt  ascii_art_2.txt  ascii_art_3.txt  ascii_art_4.txt  ascii_art_5.txt  banner.txt  deco.txt  theme.tcss  theme.toml
src/pip_agent/tui/themes/wasteland/: art.txt  ascii_art_0.txt  ascii_art_1.txt  ascii_art_2.txt  ascii_art_3.txt  ascii_art_4.txt  ascii_art_5.txt  banner.txt  deco.txt  theme.tcss  theme.toml
tests/: conftest.py  test_agent.py  test_agent_runner_prompt.py  test_anthropic_client.py  test_backend_integration.py  test_backend_matrix.py  test_background.py  test_channels.py  test_channels_wechat_poll_backoff.py  test_codex_backend.py  test_codex_bridge_env.py  test_codex_event_translator.py  test_codex_mcp_bridge.py  test_codex_plugins.py  test_codex_reflect_trigger.py  test_commands.py  test_compact.py  test_console_utf8.py  test_delivery.py  test_doctor.py  test_fileutil.py  test_hooks.py  test_host_backend_dispatch.py  test_host_commands.py  test_host_commands_theme.py  test_host_io.py  test_host_scheduler.py  test_host_state.py  test_lanes.py  test_logging_setup.py  test_main_logging.py  test_mcp_open_file.py  test_mcp_reflect.py  test_mcp_send_file.py  test_mcp_tools.py  test_memory_pipeline.py  test_memory_refactored.py  test_models.py  test_plan_forwarder.py  test_plugins.py  (+36 more)
tests/tui_snapshot_apps/: __init__.py  boot_banner.py  default_layout.py  default_layout_vault_amber.py  help_response.py
