[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pip-boy"
version = "0.2.0"
description = "Personal assistant agent with persistent memory and configurable persona"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anthropic>=0.49,<1",
    "pydantic-settings>=2.8,<3",
    "pyreadline3>=3.5,<4; sys_platform == 'win32'",
    "tavily-python>=0.5",
    "ddgs>=7",
    "pyyaml>=6,<7",
    "httpx>=0.27",
    "wecom-aibot-python-sdk>=1.0",
    "qrcode>=7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[project.scripts]
pip-boy = "pip_agent.__main__:main"

[project.urls]
Repository = "https://github.com/ByeDream/Pip-Boy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pip_agent.skills" = ["**/*.md"]
"pip_agent.scaffold" = ["*.md", "*.json", "*.txt", "env.example"]
"pip_agent.memory" = ["sops/*.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
