[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pip-boy"
version = "0.4.3"
description = "Multi-channel, identity-aware, memory-rich host for Claude Code."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anthropic>=0.49,<1",
    "claude-agent-sdk>=0.1.56",
    "pydantic-settings>=2.8,<3",
    "pyreadline3>=3.5,<4; sys_platform == 'win32'",
    "pyyaml>=6,<7",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "wecom-aibot-python-sdk>=1.0",
    "qrcode>=7",
    # TUI stack. ``textual<1`` is deliberately barred — 0.89.x has
    # documented Windows driver bugs (PipBoyCLITheme/design.md §4).
    # Upper bound on textual<10 / rich<16 leaves headroom for two
    # major versions before the next compatibility check.
    "textual>=1,<10",
    "rich>=13,<16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    # SVG snapshot baseline is a hard merge gate for any TUI / theme
    # change (PipBoyCLITheme/design.md §8). Pinned permissively because
    # the plugin is small and stable across textual minors.
    "pytest-textual-snapshot>=1,<3",
]

[project.scripts]
pip-boy = "pip_agent.__main__:main"

[project.urls]
Repository = "https://github.com/ByeDream/Pip-Boy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pip_agent.scaffold" = ["*.md", "*.json", "*.txt", "*.example"]
"pip_agent.memory" = ["sops/*.md"]
"pip_agent.tui" = ["themes/*/theme.toml", "themes/*/theme.tcss", "themes/*/art.txt"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
